<resources>
    <string name="app_name">navigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_facilities">Fasilitas</string>
    <string name="menu_account">Akun</string>
    <string name="menu_installment">Cicilan</string>
    <string name="menu_my_order">Pesanan</string>
    <string name="cd_home">Beranda</string>
    <string name="cd_facilities">Fasilitas</string>
    <string name="cd_account">Akun</string>
    <string name="cd_installment">Cicilan</string>
    <string name="cd_order">Pesanan</string>
    <string name="home_fragment">Home FRAGMENT</string>
</resources>
